# jimmy

src/jimmy_base/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/jimmy_base/include/: jimmy_hw_interface.h  jimmy_hw_interface.h~
src/jimmy_base/launch/: hw_control.launch~  mobile_base_and_lidar.launch
src/jimmy_base/src/: jimmy_base.cpp  jimmy_base.cpp~  jimmy_hw_interface.cpp  jimmy_hw_interface.cpp~
src/jimmy_control/: CMakeLists.txt  package.xml  package.xml~
src/jimmy_control/config/: jimmy_common.yaml~  jimmy_control.yaml  jimmy_control.yaml~  jimmy_gazebo_control.yaml
src/jimmy_control/launch/: jimmy_control.launch  jimmy_control.launch~
src/jimmy_description/: CMakeLists.txt  package.xml
src/jimmy_description/launch/: gazebo_jimmy_rviz_navigation_map_building.launch  gazebo_jimmy_rviz_navigation_to_goal.launch  gazebo_jimmy_rviz_teleop.launch  jimmy_rviz.launch  jimmy_rviz.launch~  physical_jimmy_rviz_navigation_map_building.launch  physical_jimmy_rviz_navigation_on_map.launch  physical_jimmy_rviz_teleop.launch
src/jimmy_description/rviz/: jimmy.rviz  physical_jimmy_rviz_navigation_build_map.rviz  physical_jimmy_rviz_navigation_on_map.rviz  physical_jimmy_rviz_teleop.rviz  virtual_jimmy_navigation.rviz  virtual_jimmy_navigation_map_building.rviz  virtual_jimmy_teleop.rviz
src/jimmy_description/urdf/: jimmy.gazebo  jimmy.xacro
src/jimmy_gazebo/: CMakeLists.txt  package.xml
src/jimmy_gazebo/include/jimmy_gazebo/: gazebo_lidar_motion.h
src/jimmy_gazebo/launch/: jimmy_in_turtlebot_world.launch  jimmy_world.launch
src/jimmy_gazebo/src/: gazebo_lidar_motion.cpp
src/jimmy_hokuyo_lidar_control/: CMakeLists.txt  package.xml
src/jimmy_hokuyo_lidar_control/include/jimmy_hokuyo_lidar_control/: lidar_system_control.h
src/jimmy_hokuyo_lidar_control/launch/: hokuyo_lidar_control.launch
src/jimmy_hokuyo_lidar_control/msg/: lidar_message.msg
src/jimmy_hokuyo_lidar_control/src/: lidar_system_control.cpp
src/jimmy_navigation/: CMakeLists.txt  package.xml
src/jimmy_navigation/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  global_planner.yaml  local_planner.yaml  move_base_parameters.yaml
src/jimmy_navigation/launch/: amcl.launch  amcl_demo_gazebo.launch  amcl_demo_physical_robot.launch  gmapping.launch  gmapping_demo.launch  move_base.launch
src/jimmy_navigation/launch/NOT USED/: move_base_mapless_demo.launch
src/jimmy_navigation/maps/: better_apt_map_last.yaml
src/jimmy_navigation/maps/gazebo_maps/: good_map.yaml
src/jimmy_navigation/maps/old_maps/my_apartment/: better_apt_map.yaml  decent_apt_map.yaml
src/jimmy_urg/urg_node/launch/: urg_lidar.launch
src/jimmy_welcome/: CMakeLists.txt  package.xml
src/jimmy_welcome/launch/: a_gazebo_teleop.launch  b_gazebo_navigation_map_building.launch  c_gazebo_navigation_on_map.launch  d_physical_teleop.launch  e_physical_navigation_map_building.launch  f_physical_navigation_on_map.launch
src/jimmycpp/: CMakeLists.txt  package.xml
src/jimmycpp/include/jimmycpp/: ampsteppers.h  arduinomega.h  lidar_magnetic_encoder.h  lidar_stepper_motion.h  trc_logging.h
src/jimmycpp/src/: ampsteppers.cpp  arduinomega.cpp  lidar_magnetic_encoder.cpp  lidar_stepper_motion.cpp  trc_logging.cpp
src/turtlebot3_teleop_modified/: CMakeLists.txt  package.xml
src/turtlebot3_teleop_modified/launch/: turtlebot3_teleop_key.launch
