<?xml version="1.0"?>
<package>
  <name>jimmy_gazebo</name>
  <version>0.0.0</version>
  <description>The jimmy_gazebo package contains everyting to do with gazebo
       with the exception of the URDF and yaml files for ros_control. I used
       the moore robot tutorials (see: http://moorerobots.com/blog) to learn 
       how to use the navigation stack; so it is likely that a few lines of 
       code from those tutorials will pop up here. If you see any issues with 
       this pakcage please let the maintainer know. I appriciate feedback.              
  </description>

  <maintainer email="TorontoRoboticsClub@protonmail.com">MO</maintainer>

  <author> MO </author>

  <url type="website">http://TorontoRoboticsClub.com</url>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <!--this is needed to be able to work with JointState, which is the topic 
      containing the lidar position in radians.-->
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
    <!--this is needed to be able to send radian position for gazebo to move
        the lidar.-->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>  
 
</package>
