<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_teleop_modified</name>
  <version>1.2.3</version>
  <description>
    Provides teleoperation using keyboard for TurtleBot3 (and Jimmy).
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <author email="thlim@robotis.com">Darby Lim</author>

  <maintainer email="TorontoRoboticsClub@protonmail.com">MO</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
